--- a/model/workflow-api/pom.xml
+++ b/model/workflow-api/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>common</artifactId>
             <version>2.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+			<groupId>com.evolveum.midpoint.tools</groupId>
+			<artifactId>test-ng</artifactId>
+			<version>2.2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 
