--- a/samples/samples-test/pom.xml
+++ b/samples/samples-test/pom.xml
@@ -158,5 +158,10 @@
 			<artifactId>log4j-over-slf4j</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
