--- a/icf-connectors/dummy-resource/pom.xml
+++ b/icf-connectors/dummy-resource/pom.xml
@@ -20,18 +20,18 @@
 	<name>Dummy Resource</name>
 	<groupId>com.evolveum.icf</groupId>
 	<artifactId>dummy-resource</artifactId>
-	<version>2.2</version>
+	<version>2.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<parent>
 		<artifactId>icf-connectors</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>util</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
