--- a/infra/test-util/pom.xml
+++ b/infra/test-util/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>infra</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
 	<repositories>
 		<repository>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>schema</artifactId>
-			<version>2.2</version>
+			<version>2.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.forgerock.opendj</groupId>
@@ -89,7 +89,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.2</version>
+			<version>2.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
