--- a/infra/util/pom.xml
+++ b/infra/util/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>infra</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.2</version>
+			<version>2.3-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
