--- a/samples/model-client-sample/pom.xml
+++ b/samples/model-client-sample/pom.xml
@@ -21,7 +21,7 @@
 	<groupId>com.evolveum.midpoint.samples</groupId>
 	<artifactId>model-client-sample</artifactId>
 	<!-- NOTE: no parent. We want this to be completely stand-alone. -->
-	<version>2.2</version>
+	<version>2.3-SNAPSHOT</version>
 	<properties>
 		<project.source.version>1.6</project.source.version>
 	</properties>
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-client</artifactId>
-			<version>2.2</version>
+			<version>2.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
             <groupId>org.apache.cxf</groupId>
