--- a/testing/selenium/pom.xml
+++ b/testing/selenium/pom.xml
@@ -21,11 +21,11 @@
     <name>Selenium tests</name>
     <groupId>com.evolveum.midpoint.testing</groupId>
     <artifactId>selenium</artifactId>
-    <version>2.2</version>
+    <version>2.3-SNAPSHOT</version>
     <parent>
         <artifactId>testing</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
     </parent>
     <organization>
         <name>Evolveum</name>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>util</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
