--- a/gui/gui-components/pom.xml
+++ b/gui/gui-components/pom.xml
@@ -21,11 +21,11 @@
     <groupId>com.evolveum.midpoint.gui</groupId>
     <artifactId>gui-components</artifactId>
     <packaging>jar</packaging>
-    <version>2.2</version>
+    <version>2.2.1-SNAPSHOT</version>
     <parent>
         <artifactId>gui</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
     <build>
         <resources>
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>schema</artifactId>
-            <version>2.2</version>
+            <version>2.2.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2</version>
+            <version>2.2.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
