--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -20,18 +20,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.evolveum.midpoint.infra</groupId>
     <artifactId>prism</artifactId>
-    <version>2.2</version>
+    <version>2.2.1-SNAPSHOT</version>
     <name>midPoint Infrastructure - prism</name>
     <parent>
         <artifactId>infra</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>util</artifactId>
-            <version>2.2</version>
+            <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <!-- <dependency>
             <groupId>com.sun.xsom</groupId>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2</version>
+            <version>2.2.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
