--- a/infra/schema/pom.xml
+++ b/infra/schema/pom.xml
@@ -24,13 +24,13 @@
     <parent>
         <artifactId>infra</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>prism</artifactId>
-            <version>2.2</version>
+            <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <!-- <dependency>
             <groupId>com.sun.xsom</groupId>
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2</version>
+            <version>2.2.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -305,7 +305,7 @@
                     <dependency>
                         <groupId>com.evolveum.midpoint.tools</groupId>
                         <artifactId>xjc-plugin</artifactId>
-                        <version>2.2</version>
+                        <version>2.2.1-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
             </plugin>
