--- a/tools/test-ng/pom.xml
+++ b/tools/test-ng/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>tools</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2</version>
+		<version>2.2.1-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
