--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -69,8 +69,8 @@
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>configuration</param-name>
-              <param-value>development</param-value>
-            <!--<param-value>deployment</param-value>-->
+              <!--<param-value>development</param-value>-->
+            <param-value>deployment</param-value>
         </init-param>
         <init-param>
             <param-name>applicationBean</param-name>
@@ -105,7 +105,7 @@
         <filter-name>wicket</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
-        <!--<dispatcher>ERROR</dispatcher>-->
+        <dispatcher>ERROR</dispatcher>
     </filter-mapping>
 
     <servlet>
@@ -126,21 +126,21 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
-    <!--<error-page>-->
-        <!--<error-code>401</error-code>-->
-        <!--<location>/error/401</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>403</error-code>-->
-        <!--<location>/error/403</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>404</error-code>-->
-        <!--<location>/error/404</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>500</error-code>-->
-        <!--<location>/error/500</location>-->
-    <!--</error-page>-->
+    <error-page>
+        <error-code>401</error-code>
+        <location>/error/401</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error/403</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error</location>
+    </error-page>
 
 </web-app>
