--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -77,10 +77,17 @@
   <version>2.3.1</version>
 </dependency>
 <dependency>
+<!--  <groupId>com.fasterxml.jackson.datatype</groupId>
+  <artifactId>jackson-module-jsonSchema</artifactId>
+  <version>2.3.0</version>
+</dependency>
+<dependency> -->
   <groupId>com.fasterxml.jackson.module</groupId>
   <artifactId>jackson-module-jaxb-annotations</artifactId>
   <version>2.2.0</version>
 </dependency>
+
+<!-- ::2.1.0 -->
             
         <!-- TEST -->
         <dependency>
